--- a/home-service-app/src/components/common/Input.module.scss
+++ b/home-service-app/src/components/common/Input.module.scss
@@ -1,10 +1,13 @@
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .input {
-  width: 18.75rem;
+  width: 70%;
   padding: 0.625rem 1.25rem;
   border: 0.125rem solid #67abc2;
   border-radius: 0.375rem;
@@ -13,6 +16,7 @@
 .error {
   color: #ff0000;
   font-size: 0.8rem;
-  font-weight: bold;
+  font-weight: 600;
   margin-top: 0.8rem;
 }
+
