--- a/home-service-full-stack/frontend/src/components/category/CategoryCard.module.scss
+++ b/home-service-full-stack/frontend/src/components/category/CategoryCard.module.scss
@@ -31,6 +31,7 @@
     width: 10rem;
     height: 5rem;
     margin-bottom: 1rem;
+    padding: 3.5rem 5rem;
 
     .name {
       font-size: 1.2rem;
