--- a/home-service-full-stack/frontend/src/components/common/ServicesContent.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/ServicesContent.module.scss
@@ -1,3 +1,9 @@
+.searchContainer {
+  display: flex;
+  margin: 0.5rem auto;
+  gap: 0.5rem;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -19,6 +25,12 @@
 }
 
 @media only screen and (min-width: 768px) {
+  .searchContainer {
+    margin: 2rem auto;
+    width: 30%;
+    gap: 1rem;
+  }
+
   .container {
     flex-direction: row;
   }
