changed a little design

--- a/home-service-full-stack/frontend/src/components/category/CategoryCard.module.scss
+++ b/home-service-full-stack/frontend/src/components/category/CategoryCard.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 7rem;
+  width: 45%;
   gap: 0.5rem;
   background-color: #f2eefd;
   border: 0.125rem solid #e6e6e6;
