--- a/home-service-full-stack/frontend/src/components/business/BusinessCard.module.scss
+++ b/home-service-full-stack/frontend/src/components/business/BusinessCard.module.scss
@@ -24,8 +24,10 @@
 .infoContainer {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  justify-content: space-between;
   gap: 0.5rem;
+  padding: 1rem;
+  height: 100%;
 }
 
 .chip {
