--- a/home-service-full-stack/frontend/src/components/business/BusinessList.module.scss
+++ b/home-service-full-stack/frontend/src/components/business/BusinessList.module.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
+  width: 100%;
 }
 
 @media only screen and (min-width: 768px) {
