--- a/home-service-full-stack/frontend/src/components/category/VerticalCategoryList.module.scss
+++ b/home-service-full-stack/frontend/src/components/category/VerticalCategoryList.module.scss
@@ -1,20 +1,24 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   gap: 1rem;
 }
 
 .title {
   color: $primary-color;
   font-size: 1.4rem;
-  margin-bottom: 2rem;
+  margin: 2rem 0;
 }
 
 @media only screen and (min-width: 768px) {
   .container {
     flex-wrap: nowrap;
     flex-direction: column;
+  }
+
+  .title {
+    margin-top: 0;
   }
 
   .card {
