--- a/home-service-full-stack/frontend/src/components/business/BusinessInfoHeader.module.scss
+++ b/home-service-full-stack/frontend/src/components/business/BusinessInfoHeader.module.scss
@@ -7,15 +7,16 @@
 
 .infoBusinessContainerFirst {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  gap: 1.5rem;
 }
 
 .avatar {
-  width: 8rem;
-  height: 8rem;
+  width: 6rem;
+  height: 6rem;
   border-radius: 50%;
   object-fit: cover;
+  align-self: center;
 }
 
 .detailsContainerFirst,
@@ -23,7 +24,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.9rem;
-  font-size: 0.85rem;
+  font-size: 85%;
   font-weight: 500;
   color: #7c7878;
 }
@@ -70,6 +71,11 @@
 
   .infoBusinessContainerSecond {
     text-align: right;
+  }
+
+  .avatar {
+    width: 10rem;
+    height: 10rem;
   }
 
   .detailsContainerFirst,
