--- a/home-service-full-stack/frontend/src/components/booking/BookingModal.module.scss
+++ b/home-service-full-stack/frontend/src/components/booking/BookingModal.module.scss
@@ -1,4 +1,4 @@
-.bookModalContainer {
+.modalContainer {
   position: fixed;
   top: 0;
   left: 0;
@@ -7,10 +7,10 @@
   display: flex;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 1000;
-  animation: open-book 0.3s forwards ease-out;
+  animation: open-modal 0.3s forwards ease-out;
 }
 
-@keyframes open-book {
+@keyframes open-modal {
   0% {
     transform: translate(100%);
     background-color: #00000017;
@@ -21,14 +21,14 @@
   }
 }
 
-.bookModalContent {
+.modalContent {
   position: relative;
   display: flex;
   flex-direction: column;
   gap: 2rem;
   width: 100%;
   height: 100%;
-  padding: 4rem 2rem;
+  padding: 2rem 4rem;
   background-color: hsl(36deg, 100%, 99%);
   overflow-y: auto;
 }
@@ -36,7 +36,7 @@
 .close {
   position: absolute;
   top: 1rem;
-  right: 1rem;
+  right: 1.5rem;
   cursor: pointer;
   color: #7c7878;
 }
@@ -77,7 +77,7 @@
 }
 
 @media only screen and (min-width: 768px) {
-  .bookModalContent {
+  .modalContent {
     position: absolute;
     top: 0;
     right: 0;
