--- a/home-service-full-stack/frontend/src/components/common/Input.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Input.module.scss
@@ -6,9 +6,16 @@
   width: 100%;
 }
 
+.label {
+  color: #333;
+  font-weight: 600;
+}
+
 .input {
   width: 100%;
+  font-size: 1rem;
   padding: 0.625rem 1.25rem;
+  margin-top: 0.5rem;
   border: 0.125rem solid #67abc2;
   border-radius: 0.375rem;
 }
