--- a/home-service-full-stack/frontend/src/components/user/Form.module.scss
+++ b/home-service-full-stack/frontend/src/components/user/Form.module.scss
@@ -12,6 +12,12 @@
   margin-top: 1rem;
 }
 
+.subtitle {
+  color: $primary-color;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -24,4 +30,44 @@
   color: #0cae42ce;
   text-align: center;
   margin: 1.5rem 0;
+}
+
+.label {
+  color: #333;
+  font-weight: 600;
+}
+
+.selectContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.select {
+  color: #000;
+  font-size: 1rem;
+  margin-top: 0.5rem;
+  padding: 0.625rem 1rem;
+  border: 0.125rem solid #67abc2;
+  border-radius: 0.375rem;
+  appearance: none;
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23333333' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 1rem center;
+  background-size: 1rem;
+  cursor: pointer;
+  transition:
+    border-color 0.3s ease,
+    box-shadow 0.3s ease;
+  &:focus {
+    outline: none;
+    border-color: #9147ff;
+  }
+}
+
+.error {
+  color: #ff0000;
+  font-size: 0.8rem;
+  font-weight: 600;
+  margin-top: 0.8rem;
 }
