added link from about page to the business register form

--- a/home-service-full-stack/frontend/src/components/pages/About/About.module.scss
+++ b/home-service-full-stack/frontend/src/components/pages/About/About.module.scss
@@ -51,6 +51,12 @@
   }
 }
 
+.formLink {
+  color: $primary-color;
+  font-style: italic;
+  font-weight: 600;
+}
+
 .address {
   color: #007bff;
 }
