--- a/home-service-full-stack/frontend/src/components/common/Modal.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Modal.module.scss
@@ -1,33 +1,52 @@
-.dropdown {
-  position: absolute;
-  top: 69%;
-  left: 37%;
+.modalContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
+  animation: open-modal 0.3s forwards ease-out;
+}
+
+@keyframes open-modal {
+  0% {
+    transform: translate(100%);
+    background-color: #00000017;
+  }
+
+  100% {
+    background-color: #000000c3;
+  }
+}
+
+.modalContent {
+  position: relative;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  font-size: 0.9rem;
-  background-color: $tertiary-color;
-  padding: 1rem;
-  border-radius: 0.5rem;
-  list-style: none;
-  box-shadow: rgba(0, 0, 0, 0.15) 2px 2px 2px 2px;
+  gap: 2rem;
+  width: 100%;
+  height: 100%;
+  padding: 2rem 4rem;
+  background-color: hsl(36deg, 100%, 99%);
+  overflow-y: auto;
 }
 
-.account {
-  font-weight: 600;
-  padding: 0.5rem 0;
-  border-bottom: 0.125rem solid #f1f1f1;
-}
-
-.link {
-  color: $secondary-color;
+.close {
+  position: absolute;
+  top: 1rem;
+  right: 1.5rem;
+  cursor: pointer;
+  color: #7c7878;
 }
 
 @media only screen and (min-width: 768px) {
-  .dropdown {
-    top: 10%;
-    left: 90%;
-    font-size: 1rem;
-    padding: 1.5rem;
+  .modalContent {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30%;
+    height: 100%;
   }
 }
