--- a/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
+++ b/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
@@ -57,9 +57,37 @@
   cursor: pointer;
 }
 
+.dropdown {
+  position: absolute;
+  top: 69%;
+  left: 37%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: 0.9rem;
+  background-color: $tertiary-color;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  list-style: none;
+  box-shadow: rgba(0, 0, 0, 0.15) 2px 2px 2px 2px;
+}
+
+.account {
+  font-weight: 600;
+  padding: 0.5rem 0;
+  border-bottom: 0.125rem solid #f1f1f1;
+}
+
 @media only screen and (min-width: 768px) {
   .topbar {
     padding: 2rem 4rem;
+  }
+
+  .dropdown {
+    top: 10%;
+    left: 90%;
+    font-size: 1rem;
+    padding: 1.5rem;
   }
 
   .link {
