--- a/home-service-full-stack/frontend/src/components/user/Form.module.scss
+++ b/home-service-full-stack/frontend/src/components/user/Form.module.scss
@@ -22,8 +22,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1.875rem 0;
+  padding: 2rem;
   gap: 1.875rem;
+  width: 100%;
 }
 
 .success {
