--- a/home-service-full-stack/frontend/src/components/layout/Layout.module.scss
+++ b/home-service-full-stack/frontend/src/components/layout/Layout.module.scss
@@ -1,5 +1,6 @@
 .rootContainer {
   padding: 2rem;
+  padding-top: 8rem;
 }
 
 .authContainer {
@@ -13,5 +14,6 @@
 @media only screen and (min-width: 768px) {
   .rootContainer {
     padding: 2rem 4rem;
+    padding-top: 10rem;
   }
 }
