--- a/home-service-full-stack/frontend/src/components/layout/Layout.module.scss
+++ b/home-service-full-stack/frontend/src/components/layout/Layout.module.scss
@@ -1,4 +1,5 @@
-.rootContainer {
+.rootContainer,
+.authContainer {
   padding: 2rem;
   padding-top: 8rem;
 }
@@ -7,13 +8,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - 117px);
+  height: 100vh;
   background-color: #f9f8fe;
 }
 
 @media only screen and (min-width: 768px) {
   .rootContainer {
     padding: 2rem 4rem;
-    padding-top: 10rem;
+    padding-top: 8rem;
   }
 }
