--- a/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
+++ b/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
@@ -20,22 +20,44 @@
   display: none;
 }
 
-.navigationMobile {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  gap: 1rem;
-  top: 6rem;
+.navigationMobileContainer {
+  position: fixed;
+  top: 5.8rem;
   left: 0;
-  right: 0;
-  height: 28rem;
-  background-color: rgba(16, 16, 16, 0.9);
-  transform: translateX(0);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
+  animation: open-modal 0.3s forwards ease-out;
 }
 
-.navigation {
+@keyframes open-modal {
+  0% {
+    transform: translate(100%);
+    background-color: #00000017;
+  }
+
+  100% {
+    background-color: #000000c3;
+  }
+}
+
+.navigationMobileContent {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  width: 70%;
+  height: 100%;
+  padding: 2rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateX(0);
+  background-color: white;
+}
+
+.navigationLargeContainer {
   display: none;
 }
 
@@ -48,12 +70,12 @@
 }
 
 .link {
-  color: #b6a7a7;
-  font-size: 1.5rem;
+  color: #323232;
+  font-size: 1.2rem;
   font-weight: 500;
 
   &:hover {
-    color: #9473e9;
+    color: $primary-color;
   }
 }
 
@@ -87,6 +109,16 @@
     padding: 1.5rem 2rem;
   }
 
+  .link {
+    margin-right: 1.5rem;
+    padding-bottom: 2.1rem;
+
+    &:focus {
+      color: $primary-color;
+      border-bottom: 3px solid $primary-color;
+    }
+  }
+
   .dropdown {
     top: 10%;
     left: 90%;
@@ -94,25 +126,12 @@
     padding: 1.5rem;
   }
 
-  .link {
-    color: #323232;
-    font-size: 1.2rem;
-    font-weight: 500;
-  }
-
-  .menu {
+  .menu,
+  .navigationMobileContainer {
     display: none;
   }
 
-  .navigation {
-    display: flex;
-    gap: 1.5rem;
-  }
-
-  .navigationMobile {
-    display: none;
-  }
-
+  .navigationLargeContainer,
   .rightSide {
     display: flex;
   }
