--- a/home-service-full-stack/frontend/src/components/common/Modal.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Modal.module.scss
@@ -1,24 +1,6 @@
 .modalContainer {
-  position: fixed;
+  @include modal-container;
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 1000;
-  animation: open-modal 0.3s forwards ease-out;
-}
-
-@keyframes open-modal {
-  0% {
-    transform: translate(100%);
-    background-color: #00000017;
-  }
-
-  100% {
-    background-color: #000000c3;
-  }
 }
 
 .modalContent {
