--- a/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
+++ b/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
@@ -17,28 +17,10 @@
 }
 
 .navigationMobileContainer {
-  position: fixed;
+  @include modal-container;
   top: 5.8rem;
   left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 1000;
-  animation: open-modal 0.3s forwards ease-out;
 }
-
-@keyframes open-modal {
-  0% {
-    transform: translate(100%);
-    background-color: #00000017;
-  }
-
-  100% {
-    background-color: #000000c3;
-  }
-}
-
 .navigationMobileContent {
   display: flex;
   flex-direction: column;
