--- a/home-service-full-stack/frontend/src/styles/_variables.scss
+++ b/home-service-full-stack/frontend/src/styles/_variables.scss
@@ -1,3 +1,25 @@
 $primary-color: #8056eb;
 $secondary-color: #000000;
 $tertiary-color: #ffffff;
+
+@mixin modal-container {
+  position: fixed;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
+  animation: open-modal 0.3s forwards ease-out;
+}
+
+@keyframes open-modal {
+  0% {
+    transform: translate(100%);
+    background-color: #00000017;
+  }
+
+  100% {
+    background-color: #000000c3;
+  }
+}
