--- a/home-service-full-stack/frontend/src/components/user/Form.module.scss
+++ b/home-service-full-stack/frontend/src/components/user/Form.module.scss
@@ -38,12 +38,14 @@
   font-weight: 600;
 }
 
+.aboutContainer,
 .selectContainer {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 
+.textarea,
 .select {
   color: #000;
   font-size: 1rem;
@@ -51,6 +53,18 @@
   padding: 0.625rem 1rem;
   border: 0.125rem solid #67abc2;
   border-radius: 0.375rem;
+  &:focus {
+    outline: none;
+    border-color: #9147ff;
+  }
+}
+
+.textarea {
+  resize: none;
+  min-width: 100%;
+}
+
+.select {
   appearance: none;
   background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23333333' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
   background-repeat: no-repeat;
@@ -60,10 +74,6 @@
   transition:
     border-color 0.3s ease,
     box-shadow 0.3s ease;
-  &:focus {
-    outline: none;
-    border-color: #9147ff;
-  }
 }
 
 .error {
