--- a/home-service-full-stack/frontend/src/components/common/Input.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Input.module.scss
@@ -7,22 +7,14 @@
 }
 
 .label {
-  color: #333;
-  font-weight: 600;
+  @include label-style;
 }
 
 .input {
-  width: 100%;
-  font-size: 1rem;
-  padding: 0.625rem 1.25rem;
-  margin-top: 0.5rem;
-  border: 0.125rem solid #67abc2;
-  border-radius: 0.375rem;
+  min-width: 100%;
+  @include input-style;
 }
 
 .error {
-  color: #ff0000;
-  font-size: 0.8rem;
-  font-weight: 600;
-  margin-top: 0.8rem;
+  @include error-message;
 }
