--- a/home-service-full-stack/frontend/src/styles/_variables.scss
+++ b/home-service-full-stack/frontend/src/styles/_variables.scss
@@ -9,7 +9,7 @@ $tertiary-color: #ffffff;
   height: 100%;
   display: flex;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: 1000;
+  z-index: 1;
   animation: open-modal 0.3s forwards ease-out;
 }
 
@@ -22,4 +22,35 @@ $tertiary-color: #ffffff;
   100% {
     background-color: #000000c3;
   }
+}
+
+@mixin label-style {
+  color: #333;
+  font-weight: 600;
+}
+
+@mixin input-container-style {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+@mixin input-style {
+  color: $secondary-color;
+  font-size: 1rem;
+  margin-top: 0.5rem;
+  padding: 0.625rem 1rem;
+  border: 0.125rem solid #67abc2;
+  border-radius: 0.375rem;
+  &:focus {
+    outline: none;
+    border-color: #9147ff;
+  }
+}
+
+@mixin error-message {
+  color: #ff0000;
+  font-size: 0.8rem;
+  font-weight: 600;
+  margin-top: 0.8rem;
 }
