--- a/home-service-full-stack/frontend/src/components/common/Input.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Input.module.scss
@@ -18,3 +18,33 @@
 .error {
   @include error-message;
 }
+
+.search {
+  transition:
+    box-shadow 100ms ease-in,
+    border 100ms ease-in,
+    background-color 100ms ease-in;
+  color: #0e0e10;
+  padding: 1rem;
+  font-size: 0.8rem;
+  border: 0.125rem solid #dee1e2;
+  border-radius: 1.875rem;
+  width: 100%;
+  height: 3rem;
+
+  &:hover {
+    border-color: #ccc;
+  }
+
+  &:focus {
+    border-color: #9147ff;
+    background: #fff;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .search {
+    font-size: 1rem;
+    height: 4rem;
+  }
+}
