--- a/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
+++ b/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
@@ -1,7 +1,6 @@
 .topbar {
   position: fixed;
   display: flex;
-  align-items: center;
   justify-content: space-between;
   padding: 1.5rem;
   border-bottom: 0.125rem solid #f1f1f1;
@@ -12,7 +11,6 @@
 
 .firstContainer {
   display: flex;
-  align-items: center;
   gap: 2rem;
 }
 
@@ -21,30 +19,23 @@
   top: 5.8rem;
   left: 0;
 }
+
 .navigationMobileContent {
+  position: absolute;
+  top: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   gap: 3rem;
   width: 75%;
   height: 100%;
   padding: 4rem 2rem;
-  position: absolute;
-  top: 0;
-  right: 0;
   transform: translateX(0);
   background-color: white;
 }
 
 .navigationLargeContainer {
   display: none;
-}
-
-.list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 1.5rem;
 }
 
 .link {
@@ -93,6 +84,13 @@
   border-bottom: 0.125rem solid #f1f1f1;
 }
 
+.buttonMobile {
+  position: absolute;
+  top: 50%;
+  left: 45%;
+  z-index: 2;
+}
+
 @media only screen and (min-width: 768px) {
   .topbar {
     padding: 1.5rem 2rem;
@@ -126,5 +124,8 @@
 
   .navigationLargeContainer {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 100vw;
   }
 }
