--- a/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
+++ b/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
@@ -2,16 +2,12 @@
   position: fixed;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
   padding: 1.5rem;
   border-bottom: 0.125rem solid #f1f1f1;
   width: 100%;
   background-color: $tertiary-color;
-  z-index: 1;
-}
-
-.firstContainer {
-  display: flex;
-  gap: 2rem;
 }
 
 .navigationMobileContainer {
@@ -84,7 +80,7 @@
   border-bottom: 0.125rem solid #f1f1f1;
 }
 
-.buttonMobile {
+.buttonAndAvatarMobile {
   position: absolute;
   top: 50%;
   left: 45%;
@@ -126,6 +122,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 100vw;
+    width: 100%;
   }
 }
