--- a/home-service-full-stack/frontend/src/styles/_variables.scss
+++ b/home-service-full-stack/frontend/src/styles/_variables.scss
@@ -23,6 +23,12 @@ $tertiary-color: #ffffff;
   }
 }
 
+@mixin flex-style {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 @mixin label-style {
   color: #333;
   font-weight: 600;
