--- a/home-service-full-stack/frontend/src/components/common/Modal.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Modal.module.scss
@@ -4,15 +4,18 @@
 }
 
 .modalContent {
-  position: relative;
+  position: absolute;
+  top: 69%;
+  left: 37%;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
-  width: 100%;
-  height: 100%;
-  padding: 2rem 4rem;
-  background-color: hsl(36deg, 100%, 99%);
-  overflow-y: auto;
+  gap: 1rem;
+  font-size: 0.9rem;
+  background-color: $tertiary-color;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  list-style: none;
+  box-shadow: rgba(0, 0, 0, 0.15) 2px 2px 2px 2px;
 }
 
 .close {
@@ -21,6 +24,26 @@
   right: 1.5rem;
   cursor: pointer;
   color: #7c7878;
+}
+
+.accountModalContainer {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: 0.9rem;
+  background-color: $tertiary-color;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  list-style: none;
+  box-shadow: rgba(0, 0, 0, 0.15) 2px 2px 2px 2px;
+  z-index: 4;
+}
+
+.accountModalContent {
+  position: absolute;
+  top: 0%;
+  left: 37%;
 }
 
 @media only screen and (min-width: 768px) {
