--- a/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
+++ b/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
@@ -6,6 +6,7 @@
   border-bottom: 0.125rem solid #f1f1f1;
   width: 100%;
   background-color: $tertiary-color;
+  z-index: 1;
 }
 
 .navigationMobileContainer {
@@ -51,21 +52,6 @@
   margin: 1.5rem 0;
 }
 
-.dropdown {
-  position: absolute;
-  top: 69%;
-  left: 37%;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  font-size: 0.9rem;
-  background-color: $tertiary-color;
-  padding: 1rem;
-  border-radius: 0.5rem;
-  list-style: none;
-  box-shadow: rgba(0, 0, 0, 0.15) 2px 2px 2px 2px;
-}
-
 .account {
   font-weight: 600;
   padding: 0.5rem 0;
@@ -82,6 +68,18 @@
 
 .buttonMobile {
   left: 40%;
+}
+
+.accountModalContent {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: 0.9rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  list-style: none;
+  box-shadow: rgba(0, 0, 0, 0.15) 2px 2px 2px 2px;
+  z-index: 4;
 }
 
 @media only screen and (min-width: 768px) {
@@ -101,13 +99,6 @@
 
   .navLine {
     display: none;
-  }
-
-  .dropdown {
-    top: 10%;
-    left: 90%;
-    font-size: 1rem;
-    padding: 1.5rem;
   }
 
   .menu,
