--- a/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
+++ b/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
@@ -26,7 +26,7 @@
   height: 100%;
   padding: 4rem 2rem;
   transform: translateX(0);
-  background-color: white;
+  background-color: $tertiary-color;
 }
 
 .navigationLargeContainer {
@@ -74,6 +74,7 @@
   border-radius: 0.5rem;
   list-style: none;
   box-shadow: rgba(0, 0, 0, 0.15) 2px 2px 2px 2px;
+  background-color: hsl(36deg, 100%, 99%);
 }
 
 .account {
@@ -91,7 +92,7 @@
 
 @media only screen and (min-width: 768px) {
   .topbar {
-    padding: 1.5rem 2rem;
+    padding: 1.5rem 3.7rem;
   }
 
   .navLink {
