--- a/home-service-full-stack/frontend/src/components/service/ServiceInfoSection.module.scss
+++ b/home-service-full-stack/frontend/src/components/service/ServiceInfoSection.module.scss
@@ -15,7 +15,7 @@
   gap: 1.2rem;
 }
 
-.businessImg {
+.serviceImg {
   width: 100%;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   border-radius: 5%;
@@ -44,7 +44,7 @@
     flex-direction: row;
   }
 
-  .businessImg {
+  .serviceImg {
     width: 15rem;
 
     &:hover,
