fixed problem with booking card style

--- a/home-service-full-stack/frontend/src/components/booking/BookingCard.module.scss
+++ b/home-service-full-stack/frontend/src/components/booking/BookingCard.module.scss
@@ -21,7 +21,7 @@
   gap: 0.5rem;
 }
 
-.businessName {
+.serviceName {
   font-weight: 800;
 }
 
@@ -55,7 +55,7 @@
     width: 49.3%;
   }
 
-  .businessName {
+  .serviceName {
     font-size: 1.2rem;
   }
 }
