trying to fix problems with favorites #2

--- a/home-service-full-stack/frontend/coverage-ts/files/src/components/booking/BookingModal.tsx.html
+++ b/home-service-full-stack/frontend/coverage-ts/files/src/components/booking/BookingModal.tsx.html
@@ -80,7 +80,7 @@ interface BookingModalProps {
 
 const BookingModal: React.FC&lt;BookingModalProps&gt; = ({ onClose }) =&gt; {
   const { currentBusiness } = useCurrentBusiness();
-  const { user } = useContext(UserContext);
+  const  = useContext(UserContext);
   const { mutateAsync: postBooking } = useAddBooking();
 
   const [dateValue, setDateValue] = useState&lt;Dayjs | null&gt;(null);
