--- a/home-service-full-stack/frontend/src/components/service/ServiceCard.module.scss
+++ b/home-service-full-stack/frontend/src/components/service/ServiceCard.module.scss
@@ -1,17 +1,6 @@
 .card {
-  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-  border-radius: 1rem;
-
-  display: flex;
   flex-direction: column;
-  transition:
-    transform 0.3s ease,
-    box-shadow 0.3s ease;
-
-  &:hover {
-    transform: translateY(-10px);
-    box-shadow: rgba(86, 20, 208, 0.25) 5px 5px 15px;
-  }
+  @include card-style;
 }
 
 .image {
