--- a/home-service-full-stack/frontend/src/components/common/Footer.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Footer.module.scss
@@ -1,7 +1,8 @@
 .footer {
   font-size: 85%;
   text-align: center;
-  padding-bottom: 1.5rem;
+  line-height: 1.2rem;
+  padding: 0 2rem 1.5rem 2rem;
 }
 
 @media only screen and (min-width: 768px) {
