--- a/home-service-full-stack/frontend/src/components/service/ServiceList.module.scss
+++ b/home-service-full-stack/frontend/src/components/service/ServiceList.module.scss
@@ -5,7 +5,13 @@
   width: 100%;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1020px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media only screen and (min-width: 1250px) {
   .container {
     grid-template-columns: repeat(4, 1fr);
   }
