--- a/home-service-full-stack/frontend/src/components/common/Modal.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Modal.module.scss
@@ -97,7 +97,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 30%;
+    width: 50%;
     height: 100%;
   }
 
@@ -138,6 +138,10 @@
 @media only screen and (min-width: 1250px) {
   .accountModalContainer {
     left: 44%;
+  }
+
+  .modalContent {
+    width: 30%;
   }
 }
 
