--- a/home-service-full-stack/frontend/src/components/layout/Layout.module.scss
+++ b/home-service-full-stack/frontend/src/components/layout/Layout.module.scss
@@ -3,7 +3,6 @@
   padding: 2rem;
   padding-top: 8rem;
   min-height: 100vh;
-  min-width: 100%;
 }
 
 .authContainer {
@@ -16,7 +15,7 @@
 
 @media only screen and (min-width: 768px) {
   .rootContainer {
-    padding: 2rem 4rem;
+    padding: 6rem;
     padding-top: 8rem;
   }
 }
