--- a/home-service-full-stack/frontend/src/components/pages/ServicePage/ServicePage.module.scss
+++ b/home-service-full-stack/frontend/src/components/pages/ServicePage/ServicePage.module.scss
@@ -7,6 +7,10 @@
   font-weight: 800;
 }
 
+.calendar {
+  width: 16rem;
+}
+
 .timeContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -44,7 +48,13 @@
   gap: 0.5rem;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 500px) {
+  .calendar {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1270px) {
   .container {
     display: flex;
   }
