added internationalization to the front-end

--- a/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
+++ b/home-service-full-stack/frontend/src/components/layout/Topbar.module.scss
@@ -9,6 +9,11 @@
   z-index: 1;
 }
 
+.headerLeftSide {
+  @include flex-style;
+  flex-direction: column;
+}
+
 .navigationMobileContainer {
   @include modal-container;
   top: 5.8rem;
