--- a/home-service-full-stack/frontend/src/components/common/Button.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Button.module.scss
@@ -37,6 +37,20 @@
   }
 }
 
+.language {
+  font-weight: 700;
+  color: $secondary-color;
+  background-color: $tertiary-color;
+  &:focus {
+    color: #e7245f;
+    border-bottom: 1px solid #e7245f;
+  }
+  &:hover {
+    color: #e7245f;
+    background-color: $tertiary-color;
+  }
+}
+
 @media only screen and (min-width: 768px) {
   .button {
     font-size: 0.9rem;
