changed languages buttons padding for a better look

--- a/home-service-full-stack/frontend/src/components/common/Button.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Button.module.scss
@@ -41,6 +41,7 @@
   font-weight: 700;
   color: $secondary-color;
   background-color: $tertiary-color;
+  padding: 0.25rem;
   &:focus {
     color: #e7245f;
     border-bottom: 1px solid #e7245f;
