--- a/home-service-full-stack/frontend/src/components/common/Button.module.scss
+++ b/home-service-full-stack/frontend/src/components/common/Button.module.scss
@@ -18,7 +18,7 @@
 
 .small {
   padding: 0.5rem;
-  max-width: 6rem;
+  max-width: 7rem;
 }
 
 .favorite {
@@ -59,6 +59,7 @@
   }
 
   .small {
+    font-size: 0.75rem;
     padding: 0.5rem 1rem;
   }
 }
